--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.62"
 async-trait = "0.1.57"
-clap = { version = "3.2.19", features = ["derive"] }
+base64 = "0.13.0"
+clap = { version = "3.2.19", features = ["derive", "env"] }
 futures = "0.3.24"
 hex = "0.4.3"
 reqwest = { version = "0.11.11", features = ["cookies", "json"] }
@@ -16,3 +17,4 @@ serde = "1.0.144"
 serde_json = "1.0.85"
 sha1 = "0.10.2"
 tokio = { version = "1.20.1", features = ["full"] }
+webbrowser = "0.7.1"
