--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sync_dis_boy"
+name = "sync_dis_boi"
 version = "0.1.0"
 edition = "2021"
 
@@ -16,5 +16,6 @@ reqwest = { version = "0.11.11", features = ["cookies", "json"] }
 serde = "1.0.144"
 serde_json = "1.0.85"
 sha1 = "0.10.2"
+strsim = "0.10.0"
 tokio = { version = "1.20.1", features = ["full"] }
 webbrowser = "0.7.1"
