--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 anyhow = "1.0.62"
 async-trait = "0.1.57"
 base64 = "0.13.0"
-clap = { version = "3.2.19", features = ["derive", "env"] }
+clap = { version = "*", features = ["derive", "env"] }
 futures = "0.3.24"
 hex = "0.4.3"
 reqwest = { version = "0.11.11", features = ["cookies", "json"] }
