--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.62"
+async-recursion = "1.0.4"
 async-trait = "0.1.57"
 base64 = "0.13.0"
 clap = { version = "*", features = ["derive", "env"] }
