--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ color-eyre = "0.6.2"
 futures = "0.3.24"
 regex = "1.8.3"
 reqwest = { version = "0.11.11", features = ["cookies", "json"] }
-serde = "1.0.144"
+serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
 strsim = "0.10.0"
 tokio = { version = "1.20.1", features = ["full"] }
