--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 YTMUSIC_HEADERS="<path>"
+YTMUSIC_CLIENT_ID="<client_id>"
+YTMUSIC_CLIENT_SECRET="<client_secret>"
 
 SPOTIFY_CLIENT_ID="<client_id>"
 SPOTIFY_CLIENT_SECRET="<client_secret>"
