feat: adding token caching with YtMusic, removing headers auth in favor of oauth

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ async-recursion = "1.0.4"
 async-trait = "0.1.57"
 clap = { version = "*", features = ["derive", "env"] }
 color-eyre = "0.6.2"
+dirs = "5.0.1"
 futures = "0.3.24"
 lazy_static = "1.4.0"
 regex = "1.8.3"
