chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ YTMUSIC_CLIENT_SECRET="<client_secret>"
 
 SPOTIFY_CLIENT_ID="<client_id>"
 SPOTIFY_CLIENT_SECRET="<client_secret>"
+
+TIDAL_CLIENT_ID="<client_id>"
+TIDAL_CLIENT_SECRET="<client_secret>"
