--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,20 +27,15 @@ jobs:
         uses: DeterminateSystems/magic-nix-cache-action@v2
       - name: Build ${{ matrix.host }} binary
         run: 'nix build -L .#${{matrix.host}}.release.SyncDisBoi'
+      - uses: actions/upload-artifact@v4
+        with:
+          name: "${{ matrix.host }}-sync_dis_boi"
+          path: "result/bin/*"
     strategy:
       matrix:
         host:
           - x86_64-linux
           - aarch64-linux
-  flake:
-    name: Flake self-check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Check Nix flake inputs
-        uses: DeterminateSystems/flake-checker-action@v5
-        with:
-          fail-mode: true
   release:
     name: Release
     needs: build
@@ -50,6 +45,19 @@ jobs:
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: "*-sync_dis_boi"
+          merge-multiple: true
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "result/bin/sync_dis_boi"
+          artifacts: "*-sync_dis_boi"
+  flake:
+    name: Flake self-check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check Nix flake inputs
+        uses: DeterminateSystems/flake-checker-action@v5
+        with:
+          fail-mode: true
