--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,16 @@ jobs:
       - name: Magic Nix Cache
         uses: DeterminateSystems/magic-nix-cache-action@v2
       - name: Build ${{ matrix.host }} binary
-        run: 'nix build -L .#${{matrix.host}}.release.SyncDisBoi'
+        run: |
+          nix build -L .#${{matrix.host}}.release.SyncDisBoi
+          mkdir artifacts/
+          cp result/bin/* artifacts
+          cd artifacts
+          ls | xargs -i mv {} ${{matrix.host}}-{}
       - uses: actions/upload-artifact@v4
         with:
           name: "${{ matrix.host }}-sync_dis_boi"
-          path: "result/bin/*"
+          path: "artifacts/*"
     strategy:
       matrix:
         host:
@@ -42,7 +47,6 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     steps:
-      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           path: "artifacts"
