feat: switching to static binary build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,8 +39,8 @@ jobs:
     strategy:
       matrix:
         host:
-          - x86_64-linux
-          - aarch64-linux
+          - x86_64-linux-musl
+          - aarch64-linux-musl
   release:
     name: Release
     needs: build
