--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,8 @@ jobs:
           path: "artifacts/*"
     strategy:
       matrix:
-        os: ubuntu-latest
+        os:
+          - ubuntu-latest
         target:
           - x86_64-linux-musl
           - aarch64-linux-musl
