--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
           mkdir artifacts/
           cp result/bin/* artifacts
           cd artifacts
-          ls | xargs -i mv {} ${{matrix.target}}-{}
+          ls | xargs -I{} mv {} ${{matrix.target}}-{}
       - uses: actions/upload-artifact@v4
         with:
           name: "${{ matrix.target }}-sync_dis_boi"
