--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ clap = { version = "*", features = ["derive", "env"] }
 color-eyre = "0.6.2"
 dirs = "5.0.1"
 futures = "0.3.24"
+iso8601 = "0.6.1"
 lazy_static = "1.4.0"
 regex = "1.8.3"
 reqwest = { version = "0.11.11", features = ["cookies", "json"] }
