--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,18 +10,24 @@ keywords = ["music", "spotify", "tidal", "youtube-music"]
 
 [dependencies]
 async-recursion = "1.1.1"
-async-trait = "0.1.88"
-clap = { version = "4.5.42", features = ["derive", "env"] }
+async-trait = "0.1.89"
+clap = { version = "4.5.48", features = ["derive", "env"] }
 color-eyre = "0.6.5"
 dirs = "6.0.0"
 futures = "0.3.31"
 iso8601 = "0.6.3"
-regex = "1.11.1"
-reqwest = { version = "0.12.20", features = ["cookies", "json"] }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
+regex = "1.11.3"
+reqwest = { version = "0.12.23", features = ["cookies", "json"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 strsim = "0.11.1"
-tokio = { version = "1.45.1", features = ["full"] }
+tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = "0.3.20"
 webbrowser = "1.0.5"
+
+[profile.release]
+strip = true
+lto = true
+# panic = "abort"
+# opt-level = "z"
